--- a/kinematics_en.html
+++ b/kinematics_en.html
@@ -202,8 +202,9 @@
                     <div  class="right" id="[1.13]">[1.13]</div>
                 </div>
                 <p>
-                    Average acceleration has little practical value. Whereas instantaneous acceleration is of great importance. Therefore, from now on, we will always refer to instantaneous acceleration when we talk about acceleration.
+                    The average acceleration has little practical value. Whereas instantaneous acceleration is of great importance. Therefore, from now on, we will always refer to instantaneous acceleration when we talk about acceleration.
                 </p>
+                <p><u>Cartesian components of acceleration</u></p>
                 <p>
                     If we know the function that expresses the position vector as a function of time \(\vec r = f(t)\), we can express the <strong>Cartesian components of acceleration</strong> as:
                 </p>
