--- a/kinematics_en.html
+++ b/kinematics_en.html
@@ -217,6 +217,20 @@
                     <div  class="center">$$ \vert \vec a\vert = \sqrt{a_x^2+a_y^2+a_z^2} $$</div>
                     <div  class="right" id="[1.15]">[1.15]</div>
                 </div>
+                <p><u>Intrinsic components of acceleration</u></p>
+                <p>When analyzing the motion of an object along a curved path, it is very useful to describe its acceleration in terms of a reference system that adapts to the shape of that curve at every instant. This reference system is called intrinsic because it is linked to the path itself.</p>
+                <p>At each point of the trajectory we can define:</p>
+                <ul>
+                    <li><strong>A point:</strong> This is simply the point of the trajectory we are considering at a given moment.</li>
+                    <li><strong>A tangent axis:</strong> This axis is a straight line that passes through the point and is parallel to the velocity of the object at that instant. It indicates the direction in which the object is moving.</li>
+                    <li><strong>A normal axis:</strong> This axis is a straight line perpendicular to the tangent axis at the considered point. It points towards the center of curvature of the trajectory.</li>
+                </ul>
+                <p>Together, these three elements form a local coordinate system that moves and rotates as the object travels along the curve.</p>
+                <p>By decomposing the acceleration vector into these axes, we obtain two components:</p>
+                <ul>
+                    <li><strong>Tangential acceleration (\(a_{\tau}\)):</strong> This component indicates the rate of change of the magnitude of the velocity. If it is positive, the object accelerates; if it is negative, the object decelerates.</li>
+                    <li><strong>Normal acceleration ((\(a_{\eta}\)):</strong> This component measures the rate of change of the direction of the velocity. It always points towards the center of curvature and is related to how quickly the object changes direction.</li>
+                </ul>
                 <p>If we know the curve that defines the particle's trajectory and its path traveled as a function of time \(s=f(t)\), we can express the variation in speed \(\Delta \vec v\) between two points on the trajectory, \(P_1\) and \(P_2\), where the particle's speed is \(\vec v_1\) and \(\vec v_2\) respectively, by means of the composition of two vectors: one in the direction of \(\vec v_1\) and another perpendicular to \(\vec v_1\). Then, the variation in speed would be:</p>
                 <div class="container">
                     <div  class="center">$$ \Delta \vec v = \Delta\vec v_{\tau} + \Delta\vec v_{\mu}  $$</div>
