--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -226,8 +226,8 @@
                 <p>Juntos, estos tres elementos forman un sistema de coordenadas local que se mueve y rota a medida que el objeto se desplaza a lo largo de la curva.</p>
                 <p>Al descomponer el vector aceleración en estos ejes, obtenemos dos componentes:</p>
                 <ul>
-                    <li><strong>Aceleración tangencial (at):</strong> Esta componente indica la tasa de cambio del módulo de la velocidad. Si es positiva, el objeto acelera; si es negativa, el objeto frena.</li>
-                    <li><strong>Aceleración normal (an):</strong> Esta componente mide la tasa de cambio de la dirección de la velocidad. Siempre apunta hacia el centro de curvatura y está relacionada con la rapidez con la que el objeto cambia de dirección.</li>
+                    <li><strong>Aceleración tangencial (\(a_{\tau}\)):</strong> Esta componente indica la tasa de cambio del módulo de la velocidad. Si es positiva, el objeto acelera; si es negativa, el objeto frena.</li>
+                    <li><strong>Aceleración normal (\(a_{\eta}\)):</strong> Esta componente mide la tasa de cambio de la dirección de la velocidad. Siempre apunta hacia el centro de curvatura y está relacionada con la rapidez con la que el objeto cambia de dirección.</li>
                 </ul>                
                 <p>Si conocemos la curva que define trayectoria de la partícula y su camino recorrido en función del tiempo \(s=f(t)\), podemos expresar la variación de la velocidad \(\Delta \vec v\) entre dos puntos de la trayectoria, \(P_1\) y \(P_2\), donde la velocidad de la partícula es \(\vec v_1\) y \(\vec v_2\) respectivamente, mediante la composición de dos vectores: uno en la dirección de \(\vec v_1\) y otro perpendicular a \(\vec v_1\). Entonces, la variación de la velocidad sería:</p>
                 <div class="container">
