--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -220,9 +220,10 @@
                 <p>En cada punto de la trayectoria podemos definir:</p>
                 <ul>
                     <li><strong>Un punto:</strong> Este es simplemente el punto de la trayectoria que estamos considerando en un momento dado.</li>
-                    <li><strong>Un eje tangente:</strong> Este eje es una línea recta que pasa por el punto y es paralela a la velocidad del objeto en ese instante. Indica la dirección en la que se mueve el objeto.</li>
+                    <li><strong>Un eje tangente:</strong> Este eje es una línea recta que pasa por el punto considerado de la trayectoria y es paralela a la velocidad del objeto en ese instante. Indica la dirección en la que se mueve el objeto.</li>
                     <li><strong>Un eje normal:</strong> Este eje es una línea recta perpendicular al eje tangente en el punto considerado. Apunta hacia el centro de curvatura de la trayectoria.</li>
                 </ul>
+                <p>Asociado al eje tangente, definimos el vector tangente unitario (\vec \tau). </p>
                 <p>Juntos, estos tres elementos forman un sistema de coordenadas local que se mueve y rota a medida que el objeto se desplaza a lo largo de la curva.</p>
                 <p>Al descomponer el vector aceleración en estos ejes, obtenemos dos componentes:</p>
                 <ul>
