--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -223,7 +223,7 @@
                     <li><strong>Un eje tangente:</strong> Este eje es una línea recta que pasa por el punto considerado de la trayectoria y es paralela a la velocidad del objeto en ese instante. Indica la dirección en la que se mueve el objeto.</li>
                     <li><strong>Un eje normal:</strong> Este eje es una línea recta perpendicular al eje tangente en el punto considerado. Apunta hacia el centro de curvatura de la trayectoria.</li>
                 </ul>
-                <p>Asociado al eje tangente, definimos el vector tangente unitario \(\vec {\tau}\). </p>
+                <p>Asociado al eje tangente, definimos el vector tangente unitario \(\vec {\tau}\). Y, asociado al eje normal, definimos el vector normal unitario \(\vec {\mu}\)</p>
                 <p>Juntos, estos tres elementos forman un sistema de coordenadas local que se mueve y rota a medida que el objeto se desplaza a lo largo de la curva.</p>
                 <p>Al descomponer el vector aceleración en estos ejes, obtenemos dos componentes:</p>
                 <ul>
