--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -230,7 +230,7 @@
                     <li><strong>Aceleración tangencial (\(a_{\tau}\)):</strong> Esta componente indica la tasa de cambio del módulo de la velocidad. Si es positiva, el objeto acelera; si es negativa, el objeto frena.</li>
                     <li><strong>Aceleración normal (\(a_{\eta}\)):</strong> Esta componente mide la tasa de cambio de la dirección de la velocidad. Siempre apunta hacia el centro de curvatura y está relacionada con la rapidez con la que el objeto cambia de dirección.</li>
                 </ul>                
-                <p>Si conocemos la curva que define trayectoria de la partícula y su camino recorrido en función del tiempo \(s=f(t)\), podemos expresar la variación de la velocidad \(\Delta \vec v\) entre dos puntos de la trayectoria, \(P_1\) y \(P_2\), donde la velocidad de la partícula es \(\vec v_1\) y \(\vec v_2\) respectivamente, mediante la composición de dos vectores: uno en la dirección de \(\vec v_1\) y otro perpendicular a \(\vec v_1\). Entonces, la variación de la velocidad sería:</p>
+                <p>Si conocemos la curva que define la trayectoria de la partícula y su camino recorrido en función del tiempo \(s=f(t)\), podemos expresar la variación de la velocidad \(\Delta \vec v\) entre dos puntos de la trayectoria, \(P_1\) y \(P_2\), donde la velocidad de la partícula es \(\vec v_1\) y \(\vec v_2\) respectivamente, mediante la composición de dos vectores: uno en la dirección de \(\vec v_1\) y otro perpendicular a \(\vec v_1\). Entonces, la variación de la velocidad sería:</p>
                 <div class="container">
                     <div  class="center">$$ \Delta \vec v = \Delta\vec v_{\tau} + \Delta\vec v_{\mu}  $$</div>
                     <div  class="right" id="[1.16]">[1.16]</div>
