--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -246,7 +246,7 @@
                     <div  class="right" id="[1.18]">[1.18]</div>
                 </div>
                 <p>
-                    Entonces, la aceleración instantánea se puede espresar mediante las <strong>componentes intrínsecas de la aceleración</strong> como la suma de dos aceleraciones, una en la dirección tangente a la trayectoria (<strong>aceleración tangencial</strong>) y otra en la dirección normal a la trayectoria(<strong>aceleración normal</strong>) en cada punto de dicha trayectoria.
+                    Entonces, la aceleración instantánea de un móvil se puede expresar, en cada punto de dicha trayectoria, mediante las <strong>componentes intrínsecas de la aceleración</strong>; esto es, como la suma de dos aceleraciones: una en la dirección tangente a la trayectoria (<strong>aceleración tangencial</strong>) y otra en la dirección normal a la trayectoria (<strong>aceleración normal</strong>).
                 </p>
                 <figure class="centered">
                     <svg id="svg1_4"></svg >
