--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -252,7 +252,7 @@
                     <svg id="svg1_4"></svg >
                     <figcaption><b>Figura 1.4</b> Variación de la velocidad en una trayectoria curva.</figcaption>
                 </figure>
-                <p>Calculemos ahora los módulos de la aceleración tangencial y de la aceleración normal. Derivando la expresión de la velocidad en base a la trayectoria <a href="#[1.8]">[1.8]</a></p>
+                <p>Calculemos ahora los módulos de la aceleración tangencial y de la aceleración normal. Derivando la expresión de la velocidad en base a la trayectoria <a href="#[1.8]">[1.8]</a>.</p>
                 <p>
                     $$
                     \begin{align}
