--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -68,7 +68,7 @@
                     El extremo del vector posición \(\vec r\) dibuja en el espacio una línea descrita por el punto material en su movimiento. Esta ruta o camino que sigue el punto móvil a lo largo del tiempo se denominada <strong>trayectoria</strong>. Podemos imaginar la trayectoria como una línea que marca el camino exacto del objeto.
                 </p>
                 <p>
-                    Si conocoemos la trayectoria del punto móvil (por ejemplo, una línea recta, una circunferencia, etc.), entonces el problema de describir su movimiento se simplifica mucho. Lo único que necesitamos encontrar es una ecuación que nos diga en qué punto de esa trayectoria se encuentra el objeto en cada instante de tiempo. Si llamamos s al <strong>camino recorrido</strong> o <strong>longitud de la trayectoria</strong>, el problema cinemático se reduce por tanto a conocer s = f(t). 
+                    Si conocoemos la trayectoria del punto móvil (por ejemplo, una línea recta, una circunferencia, etc.), entonces el problema de describir su movimiento se simplifica mucho. Lo único que necesitamos encontrar es una ecuación que nos diga en qué punto de esa trayectoria se encuentra el objeto en cada instante de tiempo. Si llamamos <strong>s</strong> al <strong>camino recorrido</strong> o <strong>longitud de la trayectoria</strong>, el problema cinemático se reduce por tanto a conocer s = f(t). 
                 </p>
                 <p>
                     Por ejemplo, imaginemos una pelota que cae en línea recta. La trayectoria es una línea vertical. Si encontramos una ecuación s = f(t), que nos diga a qué altura está la pelota en cada segundo, entonces hemos resuelto el problema cinemático para esa pelota.
@@ -76,7 +76,7 @@
             </section>
             <section><h3> 1.3 Vector Desplazamiento</h3>
                 <p>
-                    El instante en el que se inicia el estudio del movimiento de un punto material recibe el nombre de <strong>instante inicial</strong> \(t_0\). La posición del punto en dicho instante es la <strong>posición inicial</strong> \(\vec r_0\).
+                    El instante en el que se inicia el estudio del movimiento de un punto material recibe el nombre de <strong>instante inicial, \(t_0\)</strong>. La posición del punto en dicho instante es la <strong>posición inicial,  \(\vec r_0\)</strong>.
                 </p>
                 <p>
                     Como el sistema de referencia temporal, al igual que el instante de referencia espacial, es arbitrario, se considera \(t_0\) = 0.
