--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -36,15 +36,31 @@
         </ul>
         <article><header><h2 id="Teoría">1. Teoría y Conceptos Clave</h2></header>
             <section><h3>1.1 Introducción</h3>
-                <p>
-                    Un cuerpo se mueve cuando en el transcurso del tiempo cambia de posición respecto a un punto de referencia que se supone fijo.
-                </p>
-                <p>
-                    En este artículo, dedicado a la <strong>cinemática</strong>, estudiamos el movimiento de los cuerpos físicos sin considerar las causas que lo producen. Este objetivo estará conseguido cuando sepamos en cada instante donde se encuentra el cuerpo que se mueve y cómo se mueve. Debemos obtener, por tanto, una ecuación que relacione la posición del cuerpo con el tiempo.
-                </p>
-                <p>
-                    Para reducir la complejidad y centrarnos en los conceptos básicos de la cinemática, en lugar de estudiar el movimiento de cualquier cuerpo, comenzaremos estudiando el movimiento de un <strong>punto material</strong> o <strong>partícula</strong>; con el cual representamos a veces, de modo burdo, a un cuerpo. Y le definimos como un punto geométrico en el que consideramos que está concentrada toda la masa del cuerpo.
-                </p>
+                <p>Un cuerpo se mueve cuando en el transcurso del tiempo cambia de posición respecto a un punto de referencia que se supone fijo.</p>
+                <p>Para reducir la complejidad y centrarnos en los conceptos básicos del movimiento, en lugar de estudiar el movimiento de cualquier cuerpo, comenzaremos estudiando el movimiento de un <strong>punto material</strong> o <strong>partícula</strong>; con el cual representamos a veces, de modo burdo, a un cuerpo. Y le definimos como un punto geométrico en el que consideramos que está concentrada toda la masa del cuerpo.</p>
+                <p>La <strong>cinemática</strong> es una rama de la física que se encarga de estudiar el movimiento de los cuerpos sin preocuparse por las causas que lo originan. Esencialmente, la cinemática describe cómo se mueven los objetos en el espacio y el tiempo.</p>
+                <p>Para ello, la cinemática analiza y utiliza los siguientes conceptos fundamentales:</p>
+                <ul>
+                    <li><strong>Posición</strong>: El lugar que ocupa un objeto en un momento determinado. Se define en relación a un punto de referencia.</li>
+                    <li><strong>Trayectoria</strong>: El camino que sigue un objeto en movimiento. Puede ser una línea recta, una curva, una parábola, una circunferencia, etc.</li>
+                    <li><strong>Distancia</strong>: La longitud total recorrida por un objeto a lo largo de su trayectoria. Es una magnitud escalar.</li>
+                    <li><strong>Desplazamiento</strong>: El cambio de posición de un objeto, es decir, la distancia en línea recta desde su posición inicial hasta su posición final, y en qué dirección. Es una magnitud vectorial.</li>
+                    <li><strong>Tiempo</strong>: La duración de un evento o movimiento.</li>
+                    <li><strong>Velocidad</strong>: La rapidez con la que cambia la posición de un objeto y la dirección de ese cambio. Es una magnitud vectorial. Se distingue entre velocidad media (cambio de posición sobre un intervalo de tiempo) y velocidad instantánea (velocidad en un instante específico).</li>
+                    <li><strong>Rapidez o celeridad</strong>: La magnitud de la velocidad, es decir, solo indica qué tan rápido se mueve un objeto, sin considerar la dirección. Es una magnitud escalar.</li>
+                    <li><strong>Aceleración</strong>: La tasa de cambio de la velocidad de un objeto a lo largo del tiempo. Indica si la velocidad aumenta, disminuye o cambia de dirección. Es una magnitud vectorial.</li>
+                </ul>
+                <p>Además, la cinemática clasifica los movimientos según su trayectoria y su aceleración, estudiando distintos tipos de movimiento como:</p>
+                <ul>
+                    <li><strong>Movimiento Rectilíneo Uniforme (MRU)</strong>: Trayectoria en línea recta y velocidad constante (sin aceleración).</li>
+                    <li><strong>Movimiento Rectilíneo Uniformemente Acelerado (MRUA)</strong>: Trayectoria en línea recta y aceleración constante.</li>
+                    <li><strong>Movimiento Circular Uniforme (MCU)</strong>: Trayectoria circular con rapidez constante, pero con cambio continuo en la dirección de la velocidad (lo que implica aceleración centrípeta).</li>
+                    <li><strong>Movimiento Circular Uniformemente Acelerado (MCUA)</strong>: Trayectoria circular con aceleración angular constante, lo que hace que la velocidad angular varíe.</li>
+                    <li><strong>Movimiento Parabólico:</strong> Un tipo de movimiento curvilíneo que combina un movimiento horizontal uniforme con un movimiento vertical uniformemente acelerado (bajo la influencia de la gravedad, por ejemplo).</li>
+                    <li><strong>Movimiento Armónico Simple (MAS)</strong>: Un movimiento periódico de vaivén alrededor de un punto de equilibrio.</li>
+                </ul>
+                <p>En resumen, la cinemática se centra en describir y predecir la posición, la velocidad y la aceleración de los cuerpos en función del tiempo, sin entrar en las fuerzas que provocan dicho movimiento.</p>
+                <p>en las siguientes secciones de este artículo, iremos explicando cada uno de los conceptos que acabamos de enumerar</p>
             </section>
             <section><h3> 1.2 Movimiento y trayectoria</h3>
                 <p>
@@ -79,7 +95,7 @@
                     El instante en el que se inicia el estudio del movimiento de un punto material recibe el nombre de <strong>instante inicial, \(t_0\)</strong>. La posición del punto en dicho instante es la <strong>posición inicial,  \(\vec r_0\)</strong>.
                 </p>
                 <p>
-                    Como el sistema de referencia temporal, al igual que el instante de referencia espacial, es arbitrario, se considera \(t_0\) = 0.
+                    Como el sistema de referencia temporal, al igual que el instante de referencia espacial, es arbitrario, se suele considerar \(t_0\) = 0.
                 </p>
                 <p>
                     Con el paso del tiempo, el móvil irá cambiando de posición. En el instante \(t_1\), su posición será \(\vec r(t_1)\), en el instante \(t_2\), será \(\vec r(t_2)\) y así sucesivamente.
