--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -140,7 +140,7 @@
                 </p>
                 <figure class="centered">
                     <svg id="svg1_3"></svg >
-                    <figcaption><b>Figura 1.3</b> Vectorers de posición \(\vec r_1\) y \(\vec r_2\), vector desplazamiento \(\vec \Delta r\) y vectores velocidad \(\vec v_1\) y \(\vec v_2\) de un móvil.</figcaption>
+                    <figcaption><b>Figura 1.3</b> Vectores de posición \(\vec r_1\) y \(\vec r_2\), vector desplazamiento \(\vec \Delta r\) y vectores velocidad \(\vec v_1\) y \(\vec v_2\) de un móvil.</figcaption>
                 </figure>
                 <p>
                     Se define la <strong>velocidad media</strong> \(\vec v_{med}\) en el intervalo de tiempo \(\Delta t\) como:
